# mdbook-leptos

./: Cargo.toml
docs/: book.toml
docs/components/: Cargo.toml  index.html
docs/components/src/: main.rs
src/: lib.rs  main.rs
